# sap-mcp-server

./: .env.example  .env.server.example  .flake8  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONVERSATION_SUMMARY.md  DEPLOYMENT.md  Dockerfile  IMPLEMENTATION_WORKFLOW.md  LICENSE  PHASE2_TOOLS_SPLIT_COMPLETED.md  PHASE3_TRANSPORT_LAYER_COMPLETED.md  PHASE4_UTILS_TESTING_COMPLETED.md  PHASE5_CLEANUP_COMPLETED.md  PROJECT_STRUCTURE.md  README.es.md  README.ja.md  README.ko.md  README.md  README.old.md  README.th.md  README.zh-CN.md  README.zh-TW.md  REFACTORING_COMPLETED.md  REFACTORING_GUIDE.md  REFACTORING_SUMMARY.md  STDIO_CONVERSION_SUMMARY.md  client_test.py  docker-compose.yml  gmail_process_script.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt
.serena/: project.yml
.serena/memories/: refactoring_progress.md
docs/guides/: configuration.md  deployment.md  odata-service-creation-flight-demo.md  sfight-demo-guide.md  troubleshooting.md
examples/: README.md
examples/basic/: stdio_client.py
examples/chatbot/: order_inquiry_chatbot.py
sap-mcp-client/: .env.example  README.md  pyproject.toml
sap-mcp-client/docs/: CHATBOT_ARCHITECTURE.md  CHATBOT_README.md  CHATBOT_SETUP.md  ORDER_CHATBOT_README.md
sap-mcp-client/examples/: genai-example.py  order_inquiry_chatbot.py  sse_client.py  stdio_client.py
sap-mcp-server/: .env.example  .env.server.example  ARCHITECTURE.md  CONFIGURATION_GUIDE.md  DEPLOYMENT.md  IMPLEMENTATION_WORKFLOW.md  PRD.md  README.md  REFACTORING_SUMMARY.md  WORKFLOW_EXECUTION.md  pyproject.toml  test_env_loading.py  test_server.py
sap-mcp-server/config/: services.yaml.example
sap-mcp-server/src/sap_mcp/: __main__.py  server.py  sse_server.py  stdio_server.py
sap-mcp-server/src/sap_mcp/config/: schemas.py  services_loader.py  settings.py
sap-mcp-server/src/sap_mcp/sap/: client.py  exceptions.py  tools.py
scripts/: create_structure.sh  migrate_code.sh  update_imports.py
src/sap_mcp/: __init__.py  stdio_server.py
src/sap_mcp/config/: __init__.py  settings.py
src/sap_mcp/protocol/: __init__.py  schemas.py  server.py  tools.py
src/sap_mcp/sap/: __init__.py  auth.py  client.py  tools.py
